# world-cup-issue

./: .gitignore  @AutomationLog.txt  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
a-book-in-30-minutes/: README.md  dev-start.cmd  package.json  pnpm-lock.yaml
a-book-in-30-minutes/config/: xiaohei-labels.json
a-book-in-30-minutes/scripts/: package-windows.ps1
a-book-in-30-minutes/src/: App.tsx
a-book-in-30-minutes/src-tauri/: Cargo.toml  tauri.conf.json
a-book-in-30-minutes/src-tauri/.cargo/: config.toml
a-book-in-30-minutes/src-tauri/capabilities/: default.json
a-book-in-30-minutes/src-tauri/src/: commands.rs  epub.rs  lib.rs  main.rs  models.rs  operation_log.rs
a-book-in-30-minutes/tmp/: book_video_pipeline.py  build_no_future_visual_design.py  e2e_epub_path.txt  inspect_logs.py  inspect_task.py  render_no_future_programmatic_illustrations.py  scan_db_logs.py  test_youtube_thumbnail.py
data/: video-easy-creator.db
docs/: a-book-in-30-minutes-build-guide.md  a-book-in-30-minutes-design.md  a-book-in-30-minutes-video-design.md  download.md  faq.md  index.md  nas-video-classification.md  tauri-framework-design.md  why.md  xiaohei-production-solution-handoff.md  y9000p-187-rtx3070-local-image-model-guide.md
docs/.vitepress/: config.ts
docs/daily/: 2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-08.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-24.md
docs/daily_cc/: 2026-07-03.md
docs/features/: analysis.md  bracket.md  overview.md  predict.md  schedule.md  scores.md  standings.md  teams.md
docs/guide/: desktop-experience.md  getting-started.md  settings.md
docs/legal/: compliance.md  terms.md
my-disk-tree-size/: README.md  index.html  package.json  pnpm-lock.yaml
my-disk-tree-size/scripts/: package-windows.ps1
my-disk-tree-size/src/: App.tsx
my-disk-tree-size/src-tauri/: Cargo.toml  tauri.conf.json
my-disk-tree-size/src-tauri/capabilities/: default.json
my-disk-tree-size/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  operation_log.rs
release/: A Book in 30 Minutes_0.1.100_release-inventory.json  A Book in 30 Minutes_0.1.101_release-inventory.json  A Book in 30 Minutes_0.1.102_release-inventory.json  A Book in 30 Minutes_0.1.103_release-inventory.json  A Book in 30 Minutes_0.1.95_release-inventory.json  A Book in 30 Minutes_0.1.96_release-inventory.json  A Book in 30 Minutes_0.1.97_release-inventory.json  A Book in 30 Minutes_0.1.98_release-inventory.json  A Book in 30 Minutes_0.1.99_release-inventory.json
release/0.1.1/: latest.json  release-inventory.json
release/0.1.10/: latest.json  notes.md  release-inventory.json
release/0.1.11/: latest.json  notes.md  release-inventory.json
release/0.1.2/: latest.json  (+1 more)
scripts/: generate-direct-press-guide.py  generate-y9000p-controlled-munger-samples.py  generate-y9000p-munger-samples.py  package-windows.ps1  run-y9000p-xiaohei-book-smoke.py  set-y9000p-performance-mode.ps1  start-y9000p-comfyui.ps1  test-y9000p-comfyui.ps1  test-y9000p-official-xiaohei-style.py  update-y9000p-comfyui.ps1  write-update-manifest.mjs  y9000p-comfyui-env.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  http_client.rs  lib.rs  main.rs  match_status.rs  models.rs  open_data.rs
tauri-framework/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
tmp/: a_book_recent_tasks.json  dear_dad_task.json  remotion-bar-chart-preview.html  render-remotion-bar-chart-preview.cjs  render_timeline_still_video.py
video-creator/: README.md  dev-start.cmd  index.html  package.json  vite.config.ts
video-creator/src-tauri/: Cargo.toml  tauri.conf.json
video-creator/src-tauri/capabilities/: default.json
video-creator/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
(+318 files in other folders)
