[package]
name = "a_book_in_30_minutes"
version = "0.1.12"
description = "YouTube book video material generator"
authors = ["A Book in 30 Minutes"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "a_book_in_30_minutes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "a_book_in_30_minutes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
