[package]
name = "my_disk_tree_size"
version = "0.1.20"
description = "Disk space analyzer built with Tauri"
authors = ["MyDiskTreeSize"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "my_disk_tree_size_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "my_disk_tree_size"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[features]
custom-protocol = ["tauri/custom-protocol"]


