[package]
name = "video_creator"
version = "0.1.15"
description = "视频工坊桌面工作台"
authors = ["Coderdream"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "video_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "video_creator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
